# lydian

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  config-example.toml  permissions-example.yml  pyproject.toml  ruff.toml  testbot
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-test.yml  build.yml  lint-test.yml  type-lint.yml
docs/: conf.py  index.rst  readme.rst  requirements.txt
docs/reference/: bot.rst  cli.rst  config.rst  console.rst  const.rst  errors.rst  help.rst  index.rst  perms.rst  util.rst
docs/reference/cogs/: debug.rst  general.rst  util.rst  voice.rst
lydian/: __init__.py  bot.py  cli.py  config.py  console.py  const.py  errors.py  help.py  perms.py  tester_bot.py  update.py  util.py
lydian/cogs/: __init__.py  debug.py  general.py  util.py  voice.py
tests/: __init__.py  config-modified.toml  conftest.py  test_cogs_voice.py  test_config.py  test_console.py  test_const.py  test_const_regex.py  test_help.py  test_perms.py  test_tool_todos.py  test_update.py  test_util.py  test_util_fromstr.py
tests/data/: github-api-lydian-releases.json  ytdl-extract-info.json
tools/: __init__.py  testdataytdl.py  todos.py
