[project]
name = "lydian-discord-bot"
version = "0.5.0"
description = "A Discord music bot."
authors = [
    { name = "Seth 'Violet' Gibbs" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "davey>=0.1.5",
    "discord-py>=2.7.1",
    "emoji>=2.15.0",
    "humanize>=4.15.0",
    "loguru>=0.7.3",
    "prompt-toolkit>=3.0.52",
    "py-maybetype==0.12.0",
    "pynacl>=1.6.2,<1.7",
    "pytest-mock>=3.15.1",
    "python-benedict>=0.36.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "strictyaml>=1.7.3",
    "tomlkit>=0.14.0",
    "typer>=0.24.1",
    "urllib3>=2.7.0,<3.0",
    "yt-dlp>=2026.3.17",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx>=6.0,<9.0",
    "sphinx-autobuild>=2025.8.25",
]

[project.urls]
Homepage = "https://github.com/svioletg/lydian-discord-bot"
Repository = "https://github.com/svioletg/lydian-discord-bot"
Documentation = "https://lydian-discord-bot.readthedocs.io/en/latest/"
Changelog = "https://github.com/svioletg/lydian-discord-bot/blob/main/CHANGELOG.md"
Issues = "https://github.com/svioletg/lydian-discord-bot/issues"

[project.scripts]
lydian = "lydian.bot:main"
lydian-cli = "lydian.cli:cli"
lydian-manage = "lydian.cli:cli"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lydian"]

[tool.pytest]
filterwarnings = [
    "error",
    "ignore:'asyncio.iscoroutinefunction' is deprecated"
]
