[project]
name = "lydian-discord-bot"
description = "A Discord music bot."
authors = [
    { name = "Seth 'Violet' Gibbs" },
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "davey>=0.1.5",
    "discord-py>=2.7.1",
    "emoji>=2.15.0",
    "humanize>=4.15.0",
    "loguru>=0.7.3",
    "packaging>=26.1",
    "prompt-toolkit>=3.0.52",
    "py-maybetype==0.12.0",
    "pynacl>=1.6.2,<1.7",
    "python-benedict>=0.36.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "strictyaml>=1.7.3",
    "tomlkit>=0.15.0",
    "typer>=0.24.1",
    "urllib3>=2.7.0,<3.0",
    "yt-dlp>=2026.6.9",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "responses>=0.26.1",
    "ruff>=0.15.12",
    "ty>=0.0.39",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx>=6.0,<9.0",
    "sphinx-autobuild>=2025.8.25",
    "starlette>=1.3.1",
]

[project.urls]
Homepage = "https://github.com/svioletg/lydian"
Repository = "https://github.com/svioletg/lydian"
Documentation = "https://lydian.readthedocs.io/en/latest/"
Changelog = "https://github.com/svioletg/lydian/blob/main/CHANGELOG.md"
Issues = "https://github.com/svioletg/lydian/issues"

[project.scripts]
lydian = "lydian.bot:main"
lydian-cli = "lydian.cli:cli"
lydian-manage = "lydian.cli:cli"
lydian-update = "lydian.update:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lydian"]

[tool.hatch.version]
path = "lydian/__init__.py"

[tool.pytest]
filterwarnings = [
    "error",
    "ignore:'asyncio.iscoroutinefunction' is deprecated"
]
